fix: layout is broken on mobile

--- a/src/components/page.css
+++ b/src/components/page.css
@@ -14,6 +14,7 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: 50% 0%;
+  margin:0px;
 }
 
 .pageHeader {
